Use MultideviceSetupClient to fetch tether hosts.

This will limit Magic Tether hosts to devices that have gone through
Better Together Setup.

Bug: 870072
Change-Id: I9fe120f4b8d07f831ebe84aeb28267ff379f2e82
Reviewed-on: https://chromium-review.googlesource.com/1180473
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Jeremy Klein <jlklein@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584617}
Former-commit-id: 5e7a75eaa5efba5398758b1b90a02c96965c82df