chromeos/components/tether/tether_host_fetcher_impl.cc
@@ -8,6 +8,7 @@
 
 #include "base/memory/ptr_util.h"
 #include "chromeos/chromeos_features.h"
+#include "chromeos/services/multidevice_setup/public/cpp/multidevice_setup_client.h"
 #include "components/cryptauth/remote_device.h"
 #include "components/cryptauth/remote_device_provider.h"
 
@@ -22,12 +23,14 @@ TetherHostFetcherImpl::Factory*
 // static
 std::unique_ptr<TetherHostFetcher> TetherHostFetcherImpl::Factory::NewInstance(
     cryptauth::RemoteDeviceProvider* remote_device_provider,
-    device_sync::DeviceSyncClient* device_sync_client) {
+    device_sync::DeviceSyncClient* device_sync_client,
+    chromeos::multidevice_setup::MultiDeviceSetupClient*
+        multidevice_setup_client) {
   if (!factory_instance_) {
     factory_instance_ = new Factory();
   }
-  return factory_instance_->BuildInstance(remote_device_provider,
-                                          device_sync_client);
+  return factory_instance_->BuildInstance(
+      remote_device_provider, device_sync_client, multidevice_setup_client);
 }
 
 // static
@@ -38,16 +41,22 @@ void TetherHostFetcherImpl::Factory::SetInstanceForTesting(Factory* factory) {
 std::unique_ptr<TetherHostFetcher>
 TetherHostFetcherImpl::Factory::BuildInstance(
     cryptauth::RemoteDeviceProvider* remote_device_provider,
-    device_sync::DeviceSyncClient* device_sync_client) {
-  return base::WrapUnique(
-      new TetherHostFetcherImpl(remote_device_provider, device_sync_client));
+    device_sync::DeviceSyncClient* device_sync_client,
+    chromeos::multidevice_setup::MultiDeviceSetupClient*
+        multidevice_setup_client) {
+  return base::WrapUnique(new TetherHostFetcherImpl(
+      remote_device_provider, device_sync_client, multidevice_setup_client));
 }
 
 TetherHostFetcherImpl::TetherHostFetcherImpl(
     cryptauth::RemoteDeviceProvider* remote_device_provider,
-    device_sync::DeviceSyncClient* device_sync_client)
+    device_sync::DeviceSyncClient* device_sync_client,
+    chromeos::multidevice_setup::MultiDeviceSetupClient*
+        multidevice_setup_client)
     : remote_device_provider_(remote_device_provider),
-      device_sync_client_(device_sync_client) {
+      device_sync_client_(device_sync_client),
+      multidevice_setup_client_(multidevice_setup_client),
+      weak_ptr_factory_(this) {
   if (base::FeatureList::IsEnabled(chromeos::features::kMultiDeviceApi))
     device_sync_client_->AddObserver(this);
   else
@@ -91,24 +100,43 @@ void TetherHostFetcherImpl::CacheCurrentTetherHosts() {
   cryptauth::RemoteDeviceRefList updated_list;
 
   if (base::FeatureList::IsEnabled(chromeos::features::kMultiDeviceApi)) {
-    for (const auto& remote_device : device_sync_client_->GetSyncedDevices()) {
-      if (remote_device.GetSoftwareFeatureState(
-              cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) ==
-          cryptauth::SoftwareFeatureState::kSupported)
-        updated_list.push_back(remote_device);
+    multidevice_setup_client_->GetHostStatus(
+        base::BindOnce(&TetherHostFetcherImpl::OnHostStatusFetched,
+                       weak_ptr_factory_.GetWeakPtr()));
+    return;
+  }
+
+  for (const auto& remote_device :
+       remote_device_provider_->GetSyncedDevices()) {
+    if (base::ContainsKey(remote_device.software_features,
+                          cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) &&
+        (remote_device.software_features.at(
+             cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) ==
+             cryptauth::SoftwareFeatureState::kSupported ||
+         remote_device.software_features.at(
+             cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) ==
+             cryptauth::SoftwareFeatureState::kEnabled)) {
+      updated_list.push_back(cryptauth::RemoteDeviceRef(
+          std::make_shared<cryptauth::RemoteDevice>(remote_device)));
     }
-  } else {
-    for (const auto& remote_device :
-         remote_device_provider_->GetSyncedDevices()) {
-      if (base::ContainsKey(remote_device.software_features,
-                            cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) &&
-          remote_device.software_features.at(
-              cryptauth::SoftwareFeature::MAGIC_TETHER_HOST) ==
-              cryptauth::SoftwareFeatureState::kSupported) {
-        updated_list.push_back(cryptauth::RemoteDeviceRef(
-            std::make_shared<cryptauth::RemoteDevice>(remote_device)));
-      }
-    }
+  }
+
+  if (updated_list == current_remote_device_list_)
+    return;
+
+  current_remote_device_list_.swap(updated_list);
+  NotifyTetherHostsUpdated();
+}
+
+void TetherHostFetcherImpl::OnHostStatusFetched(
+    chromeos::multidevice_setup::mojom::HostStatus host_status,
+    const base::Optional<cryptauth::RemoteDeviceRef>& host_device) {
+  DCHECK(base::FeatureList::IsEnabled(chromeos::features::kMultiDeviceApi));
+  cryptauth::RemoteDeviceRefList updated_list;
+
+  if (host_status ==
+      chromeos::multidevice_setup::mojom::HostStatus::kHostVerified) {
+    updated_list.push_back(*host_device);
   }
 
   if (updated_list == current_remote_device_list_)
